fixed hero banner issue on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,6 @@ h1 {
   color: var(--color-3)
 }
 
-.title {
-  margin: 0.5rem;
-}
-
 .hero-card {
   background-image: url("./files/pictures/falloutanomalybanner.webp");
   height: 300px;
@@ -29,14 +25,22 @@ h1 {
   position: relative;
 }
 
+.hero-title {
+  margin: 0rem;
+    text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
 .navbar {
   border: 2px solid black;
   padding-left: 1rem;
   padding-right: 1rem;
-  display: grid;
-  grid-auto-flow: column;
-  grid-template-columns: auto auto auto auto 1fr;
-  column-gap: 40px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .navbar-tab {
@@ -46,7 +50,7 @@ h1 {
   border-radius: 6px;
   cursor: pointer;
   color: var(--color-4);
-  font-size: 36pt;
+  font-size: 24pt;
   font-weight: 900;
   background-color: var(--bg);
 }
